# SMaLLFramework

./: #torch_driver_pool.cpp#  .gitignore  Acknowledgements.txt  CMakeLists.txt  CONTRIBUTING.md  Contributors.txt  LICENSE  README.md  SupportingNewLayers.md  Untitled-1.cpp  VGG_driver.cpp  config.h  direct_convolution.h  driver.cpp  driver_1x1.cpp  driver_dw.cpp  driver_pool.cpp  fused_conv_pooling.h  fusing_pooling.md  generate_config.py  generic_driver.cpp  kernel.h  pytorch_script.py  resnet_script.sh  run_tests.sh  scr.sh  scr.sh~  scrip_1x1_ic_scaling.sh  script.sh  script.sh~  script_VGG.sh  switched_resnet_1x1.sh  tensorflow_script.py  torch_1x1  torch_driver.cpp  torch_driver_1x1.cpp  torch_driver_1x1_scalar.cpp  torch_driver_avg_pool.cpp  torch_driver_complex.cpp  torch_driver_dw.cpp  (+25 more)
Experiments/: WSS.py  mobilenet_conv_full.sh  pytorch_VGG_script.py  pytorch_relu2onnx.py  pytorch_script.py  resnet_1x1.sh  run_libtorch.sh  run_libtorch.sh~  run_pooling_versions.sh  scrip_1x1_ic_scaling.sh  script.sh  script_VGG.sh  script_VGG_almost.sh  script_VGG_fused_relu.sh  script_VGG_numth.sh  script_run_all.sh  script_run_all.sh~  sweep_script.sh  sweep_script.sh~  sweep_sizes.sh  tensorflow_script.py  test_all.sh  unchanged_opt_relu_dw.html  unchanged_unopt_relu_dw.html  varyC_pool_script.sh  varyK_pool_complete_script.sh  varyK_pool_script.sh
benchmark/: CMakeLists.txt  analyze_yolov3tiny_layers.cpp  analyze_yolov3tiny_layers_accum.cpp
benchmark/onnx/: .gitignore  SupportedModels.md  extract_weights.py  helper.py  mobilenet.S  model_run.sh  parse_onnx.py  repack_weights.py  run_onnx_model.py  run_torch_onnx.py  simple_conv_onnx.py
benchmark/onnx/debug_onnx/: get_layer_outs_torch.py
code_gen/: generate_assembly.py  generator.py  handyxml.py  intrinsics_gen.h  intrinsics_gen.h.gch  parameters.xml  (+2 more)
cuda_demo/: CMakeLists.txt  cuda_relu.cpp  cuda_relu.cu
demo/: CMakeLists.txt  DartConfiguration.tcl  Timer.hpp  _check_interface_abstract.hpp  autoencoder.cpp  check_interface.cpp  check_interface.h  check_interface_abstract.cpp  check_intrinsics_float.h  dscnn.cpp  dscnn_square.cpp  fused_block_driver.cpp  generic_driver.cpp  generic_quant_driver.cpp  intrinsics_ref.h  kernel_naive.h  layer_kernel_test_driver.cpp  mobilenet.cpp  mobilenet_reshuffled.cpp  mobilenet_v2_reshuffled.cpp  naive_direct_convolution.h  q_dscnn.cpp  resnet.cpp  resnet_1D.cpp  tinyyolov2.cpp  torch_utils.h  utils.h  vggnet_reshuffled.cpp  yolov3.cpp
demo/compare_with_tf/: CMakeLists.txt  generate.py  static_interface_abstract.cpp  tf_mobilenet.py
demo/small-MCU/: setup_env.sh
demo/small-MCU/small/: Makefile  autoencoder.x  driver.cpp  dscnn.x  resnet.x  setup_env.sh  small.ino
demo/small-MCU/small/quantized/: a.out  autoencoder.cpp  dscnn.cpp  resnet.cpp  test_limits.cpp
demo/small-MCU/small/quantized/include/: small.h  utils.h
demo/small-MCU/small/quantized/include/kernels/quantized_arm7E/: intrinsics.h  params.h  utils.h
demo/small-MCU/small/quantized/include/kernels/quantized_reference/: intrinsics.h  params.h
demo/small-MCU/small/quantized/include/kernels/reference/: intrinsics.h  params.h
demo/small-MCU/small/quantized/include/small/: abstract_layer.hpp  interface.hpp  interface_abstract.hpp  q_abstract_layer.hpp  q_interface_abstract.hpp
demo/small-MCU/small/unquantized/: autoencoder.cpp  dscnn.cpp  mobilenet.cpp  resnet.cpp  resnet.cpp.bak
demo/small-MCU/small/unquantized/include/: small.h  utils.h
demo/standalone_MCU/: a.out  autoencoder.cpp  autoencoder.x  dscnn.cpp  dscnn.x  mobilenet.cpp  mobilenet.x  resnet.cpp  resnet.x  working_autoencoder.cpp
demo/standalone_MCU/include/: utils.h
demo/standalone_MCU/include/small/: abstract_layer.hpp  interface_abstract.hpp
src/: #kernel.h#  CMakeLists.txt  avg_pooling_kernel.h  bottleneck_kernel.h  direct_complex_convolution.h  direct_convolution.h  direct_convolution_dox.h  direct_convolution_specialized.h  dw_conv_kernel.h  dw_convolution_kernel.h  dw_kernel.h  dwconv.cpp  fused_conv_bottleneck.h  fused_conv_conv.h  fused_conv_dw.h  fused_conv_dw_10.h  fused_conv_dw_pool.h  fused_conv_kernel.h  fused_conv_norm.h  fused_conv_pooling.h  fused_global_pooling.h  gpool_kernel.h  interface.cpp  interface.h  interface_abstract.cpp  intrinsics.h  kernel.h  kernel_naive.h  naive_direct_convolution.h  pool_kernel.h  pooling_kernel.h  scalar_intrinsics.h  scalar_pooling_kernel.h  torch_utils.h  utils.h  zen2_intrinsics.h
src/kernels/arm/: enrique-dup.h  gen_intrinsics.py  intrinsics-gen.h  intrinsics.h  intrinsics.h.bak  intrinsics.new.h.bak  intrinsics_ref.h  kernel_enrique.h  params.h
src/kernels/arm_a55/: intrinsics-gen.h
src/kernels/arm_x1/: intrinsics.h
src/kernels/quantized_arm7E/: Buffer.hpp  buffer_test.cpp  intrinsics.h  params.h
src/kernels/quantized_reference/: Buffer.hpp  intrinsics.h  params.h  utils.h
src/kernels/reference/: Buffer.hpp  intrinsics.h  params.h
src/kernels/zen2/: Buffer.hpp  intrinsics.h  params.h
test/: CMakeLists.txt  Timer.hpp  _test_quint_ewise.cpp  acutest_example.cpp  gen_reg_data.py  interface.cpp  interface.h  intrinsics.h  kernel.h  kernel_benchmark_test.cpp  kernel_naive.h  kernel_naive_old.h  layer_classes.cpp  naive_direct_convolution.h  test_acutest.cpp  test_autoencoder.cpp  test_averagepool.cpp  test_buffer.cpp  test_conv1d.cpp  test_conv2d.cpp  test_conv2d_rect.cpp  test_darknet.cpp  test_dscnn.cpp  test_dscnn_square.cpp  test_dw_conv.cpp  test_leaky.cpp  test_maxpool.cpp  test_mobilenet.cpp  test_packing.cpp  test_parser.cpp  test_partial_bias.cpp  test_partial_conv2d.cpp  test_quint_ewise.cpp  test_relu.cpp  test_resnet8.cpp  test_route_concat.cpp  test_shortcut.cpp  test_softmax.cpp  test_tensor.cpp  test_tinyyolov2.cpp  (+5 more)
test/arduino_quint_ewise_tests/: arduino_quint_ewise_tests.ino  arduino_quint_ewise_tests.ino.elf  intrinsics_quint8.h
test/cfg_data/: no_wspace_yolov3-tiny.cfg  yolov3-tiny.cfg  yolov3-tiny_wbug.cfg
test/regression_data/: filter__conv2d_bn_Ci3_Co16_H416_W416_k3_s0_f_432.bin2  in__yolo_Ci255_H38_W38_k0_s0_f_368220.bin2  out_yolov3tiny_NP2535_BC85.bin2
(+164 files in other folders)
